--- a/2021-1/beamer/C20_md1.tex
+++ b/2021-1/beamer/C20_md1.tex
@@ -1,6 +1,7 @@
 %\documentclass{beamer} 
 \documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -42,7 +43,6 @@
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
-%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 \setbeamertemplate{itemize item}{$\circ$}
 \setbeamertemplate{enumerate items}[default]
 \definecolor{links}{HTML}{2A1B81}
@@ -113,11 +113,11 @@
     
     
     \begin{frame}
-        Una aplicación importante de la noción de valencia es en el problema de determinar si dos grafos son o no isomorfos. 
+        Una aplicación importante de la noción de valencia es en el problema de determinar si dos grafos son o no isomorfos. \pause
         
         \vskip .6cm
         
-        Si     $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$, y $\alpha(v)=w$, entonces cada arista que contiene a $v$ se transforma en una arista que contiene a $w$. 
+        Si     $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$, y $\alpha(v)=w$, entonces cada arista que contiene a $v$ se transforma en una arista que contiene a $w$. \pause
         
         \vskip .6cm
         
@@ -174,22 +174,24 @@
     
     
     \begin{frame}
-        Una extensión de esta idea se da en la siguiente proposición.
+        Una extensión de esta idea se da en la siguiente proposición.\pause
         
         \vskip .4cm
         \begin{proposicion}\label{criterioiso}Sean  $G_1$ y $G_2$ grafos isomorfos. Para cada $k\ge 0$ sea $n_i(k)$ el
             número de vértices de $G_i$ que tienen valencia $k$ ($i=1,2$).
             Entonces $n_1(k)=n_2(k)$.
-        \end{proposicion}
+        \end{proposicion}\pause
         \vskip .4cm
-        \begin{proof} Hemos visto más arriba que si $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$ y $v\in V_1$, entonces $\delta(v)=\delta(\alpha(v))$. Luego la cantidad de vértices con valencia $k$ en $G_1$ es igual  a la cantidad de vértices con valencia $k$ en $G_2$.     
+        \begin{proof}\pause  Hemos visto más arriba que si $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$ y $v\in V_1$, entonces $\delta(v)=\delta(\alpha(v))$. Luego la cantidad de vértices con valencia $k$ en $G_1$ es igual  a la cantidad de vértices con valencia $k$ en $G_2$.  
+            
+            \qed
         \end{proof}
     \end{frame}
     
     \begin{frame}
         
         
-        No hay ningún criterio general eficiente para determinar si dos grafos son isomorfos o no. En  el siguiente ejemplo, no se aplica el criterio anterior. 
+        No hay ningún criterio general eficiente para determinar si dos grafos son isomorfos o no. En  el siguiente ejemplo, no se aplica el criterio anterior. \pause
         
         \vskip .4cm
         \begin{ejemplo}
@@ -239,25 +241,27 @@
     
     
     \begin{frame}
-        \begin{solucion}
+        \begin{solucion}\pause
             Ambos tienen $6$ vértices, $9$ aristas y todos los vértices son de valencia $3$. 
-            
+            \pause
             \vskip .4cm
             
             
             Sin embargo, observar que  $G_1$ tiene un subgrafo $K_3$:
+            \vskip .2cm
             \begin{center}
-                \begin{tikzpicture}[scale=1]
+                \begin{tikzpicture}[scale=0.8]
                     \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
                     \Vertex[x=0.00, y=2.00]{a}
                     \Vertex[x=2., y=-1.50]{b}
                     \Vertex[x=-2., y=-1.50]{c}
                     \Edges(a,b,c,a)
                 \end{tikzpicture}
-            \end{center}
-            
+            \end{center}\pause
+            \vskip .4cm
             Mientras que $G_2$ no lo tiene. Por lo tanto, $G_1$ y $G_2$ no son isomorfos.
             
+            \qed
         \end{solucion}
     \end{frame}
     
@@ -267,19 +271,38 @@
             $$
             v_1,v_2,\ldots,v_k,
             $$
-            tal que $v_i$ y $v_{i+1}$ son adyacentes ($1 \le i \le k-1$). Si
-            todos los vértices son distintos, una caminata es llamada un {\em
-                camino}.  \index{camino}
+            tal que $v_i$ y $v_{i+1}$ son adyacentes ($1 \le i \le k-1$). \pause
+            
+            \vskip .4cm
+            Si todos los vértices son distintos, una caminata es llamada un {\em  camino}.\pause
             
             \vskip .4cm
             
-            Llamaremos {\em ciclo} a una caminata  \index{ciclo}
-            $v_1,v_2,\ldots,v_{r+1}$ cuyos vértices son distintos exceptuando
-            los extremos, es decir que $v_1=v_{r+1}$ y  a menudo diremos que es un {\em
-                $r$-ciclo}, o un ciclo de {\em longitud} $r$ en $G$.
-            \index{longitud de un ciclo}
-        \end{definicion}
+            Un \textit{recorrido} es una caminata donde todas las aristas $\{v_i,v_{i+1}\}$ con $1 \le i \le k-1$ son distintas.  
+
+            \vskip .4cm
+
+            Un {\em ciclo} a una caminata $v_1,v_2,\ldots,v_{k}, v_1$ con $v_1,v_2,\ldots,v_{k}$ camino y $k \ge 3$. A menudo diremos que es un {\em
+                $k$-ciclo}, o un ciclo de {\em longitud} $k$ en $G$.
+        \end{definicion}\pause
+
+    
         
+    \end{frame}
+
+
+    \begin{frame}
+        
+        \begin{observacion}
+            \begin{itemize}
+                \item Por definición de caminata $k\ge2$, es decir una caminata tiene al menos una arista ($\{v_1, v_2\}$).
+                \item Por definición de ciclo  $v_1,v_2,\ldots,v_{k}, v_1$, $k \ge 3$; un ciclo tiene al menos 3 aristas (claramente, no hay 2-ciclos.). 
+            \end{itemize}
+
+        \end{observacion}
+    
+        \vskip 3cm
+    
     \end{frame}
     
     \begin{frame}
@@ -287,52 +310,59 @@
             Dibujemos caminatas, caminos y ciclos en el siguiente grafo:
             \vskip .4cm
             
-            \begin{figure}[ht]
-                \begin{center}
-                    \begin{tikzpicture}[scale=1]
-                        %\SetVertexSimple[Shape=circle,FillColor=white]
-                        \def\rvar{1.2}
-                        \Vertex[x=0.00, y=-2.00]{$u$}
-                        \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-                        \Vertex[x=\rvar*1.18, y=1.62]{$q$}
-                        \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-                        \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-                        \Vertex[x=0, y=0]{$s$}
-                        \Edges($u$,$t$,$q$,$p$)
-                        \Edges($r$,$u$)
-                        \Edges($s$,$t$)
-                        \Edges($r$,$s$,$q$,$r$)
-                        \Edges($p$,$t$,$s$)
-                        \Edges($s$,$p$)
-                    \end{tikzpicture}
-                \end{center}
-            \end{figure}
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edge(u)(t)
+                    \Edges(t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
+                    \Edges(s,p)
+                    
+                    %\Edge[label=1](u)(t)
+                \end{tikzpicture}
+            \end{center}
             
         \end{ejemplo}
     \end{frame}
+
     
     \begin{frame}[fragile]
         
-        Caminata: $p$,$q$,$t$,$s$,$q$,$r$,$u$
+        Caminata: p,q,t,s,q,r,u
         
         \begin{figure}[ht]
             \begin{center}
                 \begin{tikzpicture}[scale=1]
                     %\SetVertexSimple[Shape=circle,FillColor=white]
                     \def\rvar{1.2}
-                    \Vertex[x=0.00, y=-2.00]{$u$}
-                    \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-                    \Vertex[x=\rvar*1.18, y=1.62]{$q$}
-                    \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-                    \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-                    \Vertex[x=0, y=0]{$s$}
-                    \Edges($u$,$t$,$q$,$p$)
-                    \Edges($r$,$u$)
-                    \Edges($s$,$t$)
-                    \Edges($r$,$s$,$q$,$r$)
-                    \Edges($p$,$t$,$s$)
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edges(u,t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
                     \tikzset{EdgeStyle/.style = {->,color=blue}}
-                    \Edges($p$,$q$,$t$,$s$,$q$,$r$,$u$)
+                    %\tikzset{EdgeStyle/.append style = {bend left,->,color=blue}}
+                    \Edge[label=1](p)(q)
+                    \Edge[label=2](q)(t)
+                    \Edge[label=3](t)(s)
+                    \Edge[label=4](s)(q)
+                    \Edge[label=5](q)(r)
+                    \Edge[label=6](r)(u)
                 \end{tikzpicture}
             \end{center}
         \end{figure}
@@ -340,26 +370,30 @@
     
     \begin{frame}
         
-        Camino: $p$,$q$,$s$,$r$,$u$,$t$
+        Camino: p,q,s,r,u,t
         
         \begin{figure}[ht]
             \begin{center}
                 \begin{tikzpicture}[scale=1]
                     %\SetVertexSimple[Shape=circle,FillColor=white]
                     \def\rvar{1.2}
-                    \Vertex[x=0.00, y=-2.00]{$u$}
-                    \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-                    \Vertex[x=\rvar*1.18, y=1.62]{$q$}
-                    \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-                    \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-                    \Vertex[x=0, y=0]{$s$}
-                    \Edges($u$,$t$,$q$,$p$)
-                    \Edges($r$,$u$)
-                    \Edges($s$,$t$)
-                    \Edges($r$,$s$,$q$,$r$)
-                    \Edges($p$,$t$,$s$)
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edges(u,t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
                     \tikzset{EdgeStyle/.style = {->,color=blue}}
-                    \Edges($p$,$q$,$s$,$r$,$u$,$t$)
+                    \Edge[label=1](p)(q)
+                    \Edge[label=2](q)(s)
+                    \Edge[label=3](s)(r)
+                    \Edge[label=4](r)(u)
+                    \Edge[label=5](u)(t)
                 \end{tikzpicture}
             \end{center}
         \end{figure}
@@ -367,26 +401,32 @@
     
     \begin{frame}
         
-        Ciclo: $p$,$q$,$s$,$r$,$u$,$t$,$p$
+        Ciclo: p,q,s,r,u,t,p
         
         \begin{figure}[ht]
             \begin{center}
                 \begin{tikzpicture}[scale=1]
                     %\SetVertexSimple[Shape=circle,FillColor=white]
                     \def\rvar{1.2}
-                    \Vertex[x=0.00, y=-2.00]{$u$}
-                    \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-                    \Vertex[x=\rvar*1.18, y=1.62]{$q$}
-                    \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-                    \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-                    \Vertex[x=0, y=0]{$s$}
-                    \Edges($u$,$t$,$q$,$p$)
-                    \Edges($r$,$u$)
-                    \Edges($s$,$t$)
-                    \Edges($r$,$s$,$q$,$r$)
-                    \Edges($p$,$t$,$s$)
+                    \Vertex[x=0.00, y=-2.00]{u}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{t}
+                    \Vertex[x=\rvar*1.18, y=1.62]{q}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{p}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{r}
+                    \Vertex[x=0, y=0]{s}
+                    \Edges(u,t,q,p)
+                    \Edges(r,u)
+                    \Edges(s,t)
+                    \Edges(r,s,q,r)
+                    \Edges(p,t,s)
                     \tikzset{EdgeStyle/.style = {->,color=blue}}
-                    \Edges($p$,$q$,$s$,$r$,$u$,$t$,$p$)
+                    \Edge[label=1](p)(q)
+                    \Edge[label=2](q)(s)
+                    \Edge[label=3](s)(r)
+                    \Edge[label=4](r)(u)
+                    \Edge[label=5](u)(t)
+                    \Edge(t)(p)
+    
                 \end{tikzpicture}
             \end{center}
         \end{figure}
@@ -507,8 +547,8 @@
     
     \begin{frame} 
         Escribamos $x \sim y$ siempre y cuando los vértices $x$ e $y$ de
-        $G$ puedan ser unidos por un camino en $G$: hablando en forma
-        rigurosa, esto significa que hay un camino $v_1,v_2,\ldots,v_k$ en
+        $G$ puedan ser unidos por un camino en $G$ o $x=y$: hablando en forma
+        rigurosa, esto significa que si $x \ne y$ hay un camino $v_1,v_2,\ldots,v_k$ en
         $G$ con $x=v_1$ e $y=v_k$. 
         \vskip .3cm
         
@@ -516,19 +556,42 @@
             Sea $G$ grafo,  diremos que es conexo si  para $x\sim y$ para cualesquiera  $x,y$ vértices en $G$. 
         \end{definicion}
         
-        \vskip .3cm
-        El  lema de la página anterior implica que:
-        \begin{itemize}
-            \item $x \sim x$ (reflexividad de $\sim$).
-            \item $x \sim y$, entonces $y \sim x$ (simetría de $\sim$).
-            \item $x \sim y$,  $y \sim z$, entonces  $x \sim z$ (transitividad  de $\sim$).
-        \end{itemize}
-        \vskip .3cm
-        Es decir, $\sim$  es una relación de equivalencia. 
+        \vskip .6cm
+        El  lema de la página anterior implica que  $\sim$  es una relación de equivalencia. 
+
+    
+        
+ 
     \end{frame}
     
+    \begin{frame}
+        \begin{proposicion} Sea $G$ grafo  y $x$, $y$, $z$ vértices de $G$. Entonces, 
+            \begin{enumerate}
+                \item $x \sim x$ (reflexividad de $\sim$).
+                \item $x \sim y$, entonces $y \sim x$ (simetría de $\sim$).
+                \item $x \sim y$,  $y \sim z$, entonces  $x \sim z$ (transitividad  de $\sim$).
+            \end{enumerate}
+        \end{proposicion}
+        
+        \begin{proof}
+            (1) Por definición $x \sim x$.
+            \vskip .4cm
+
+            (2) Si $x=x_1,x_2, \ldots,x_k= y$  es un camino de $x$ a $y$,  entonces $y=x_k,\ldots, x_2, x_1 =x$  es un camino de $y$ a $x$.
+            \vskip .4cm
+
+            (3) 
+            
+            $x \sim y$ $\Rightarrow$  un camino de $x$ a $y$. 
+
+            $y \sim z$ $\Rightarrow$  un camino de $y$ a $z$.
+            
+            Pegando los caminos en $y$,  obtenemos  una caminata de $x$ a $z$ (que se reduce a un camino por el lema). \qed
+
+        \end{proof}
+        
     
-    
-    
+    \end{frame}
+
 \end{document}
 
