--- a/2021-1/beamer/C21_md1.tex
+++ b/2021-1/beamer/C21_md1.tex
@@ -108,6 +108,7 @@
     
     \frame{\titlepage} 
     
+    
     \begin{frame}\frametitle{Los puentes de Könisberg}
         
         {\color{blue}Pregunta}%
@@ -211,9 +212,8 @@
         \end{solucion}
     \end{frame}
     
+        
     \begin{frame}
-        
-        
         \begin{definicion}
             Un {\em ciclo hamiltoniano} en un grafo $G$ es un ciclo que contiene a todos los vértices del grafo.
             \vskip .2cm
@@ -312,6 +312,13 @@
         \end{solucion}
     \end{frame}
     
+
+    \begin{frame}
+        \frametitle{}
+    
+        
+    
+    \end{frame}
     
 \end{document}
 
