--- a/2021-1/beamer/C21_md1.tex
+++ b/2021-1/beamer/C21_md1.tex
@@ -148,9 +148,9 @@
         
         \vskip .5cm 
         \begin{itemize}
-            \item Supongamos que el vértice de partida es $x$ y  el de llegada es $y$. Todos los demás los llamo intermedios.
+            \item Supongamos que el vértice de partida es $x$ y  el de llegada es $y$. Todos los demás los llamo vértices intermedios.
             \item En un vértice intermedio cada vez que entro por un puente salgo por otro. Eso  me ``aporta''  2 a la valencia.
-            \item Terminado el proceso usé todos los puentes, por lo tanto  en cada vértice intermedio la cantidad de entradas más la cantidad de salidas es la valencia. Como la cantidad de entradas es igual a la cantidad de salidas, la valencia es par.
+            \item Terminado el proceso usé todos los puentes, por lo tanto  en cada vértice intermedio la cantidad de entradas más la cantidad de salidas es la valencia. Como la cantidad de entradas es igual a la cantidad de salidas, la valencia en los vértices intermedios es par.
             
         \end{itemize}
         
@@ -226,24 +226,41 @@
         \begin{teorema}  Un grafo conexo con más de un vértice tiene un circuito euleriano si y sólo si todos los vértices tienen grado par. Un grafo conexo con más de un vértice posee caminatas eulerianas de $v$ a $w$, con $v \not= w$ si y sólo si $v$ y $w$ son los únicos vértices de grado impar.
         \end{teorema}
     \end{frame}
+
+    \begin{frame}
     
+
+        C. Hierholzer (1840-1871) mostró, poco antes de su muerte, un algoritmo fácilmente implementable para encontrar un circuito euleriano  para cualquier grafo  con vértices de grado  par. 
+        
+        \vskip .6cm
+        
+        El  mismo algoritmo sirve para grafos con dos vértices de grado impar.
+        
+        \vskip .6cm
+        
+        Para explicar el algoritmo de Hierholzer nos es útil la siguiente definición:  un \textit{recorrido maximal}  es un recorrido que respetando la condición de no repetir aristas no es posible continuarlo.  
+
+        \vskip .6cm
+
+        La idea clave del algoritmo de Hierholzer  es la siguiente:  en un grafo de valencias pares (conexo o no conexo) todo recorrido maximal termina en el vértice original.
+
+    \end{frame}
+
     \begin{frame}
         \frametitle{Idea de la demostración (1)}
         
-        Observemos que toda caminata que no repite aristas en un grafo par se detiene en el origen.
-        \vskip .2cm
         
-        Algoritmo para encontrar caminatas eulerianas en un grafo par:
-        \vskip .2cm
+        Algoritmo  de Hierholzer (grafo con todas valencias pares):
+        \vskip .4cm
         \begin{enumerate}
-            \item \textbf{Paso 1.} Elija cualquier vértice  inicial $v$ y haga una caminata  que no repita aristas y  que vuelva al vértice (de $v$ a $v$). 
+            \item \textbf{Paso 1.} Elija cualquier vértice  inicial $v$ y haga un recorrido  maximal.
             \vskip .2cm
             (recorrido cerrado, puede no cubrir todas las aristas).
-            \vskip .2cm
+            \vskip .4cm
             \item \textbf{Paso iterativo} 
             \begin{enumerate}
-                \item[\textit{i)}] Mientras exista un vértice $u$ en la caminata ya realizada, pero que tenga aristas que no formen parte de la caminata, inicie otra caminata desde $u$ hasta $u$ siguiendo las aristas no utilizadas.
-                \item[\textit{ii)}] Inserte esta  caminata a la caminata  anterior para formar una caminata nueva (más larga).
+                \item[\textit{i)}] Mientras exista un vértice $u$ en la caminata ya realizada, pero que tenga aristas que no formen parte de la caminata, inicie otro recorrido maximal (será de $u$ a $u$) siguiendo las aristas no utilizadas.
+                \item[\textit{ii)}] Inserte esta  caminata a la caminata  anterior en $u$  para formar una caminata nueva (más larga).
                 \item[\textit{iii)}] Si no cubrió todas las aristas vuelva a \textit{i)}.
             \end{enumerate} 
             
@@ -271,26 +288,27 @@
     
     \begin{frame}
         \begin{ejemplo}
-            Encontremos una caminata euleriana con origen en $p$ y final en $r$ del siguiente grafo. 
+            Encontremos un circuito euleriano del siguiente grafo. 
+            \vskip .4cm
             \begin{figure}[ht]
                 \begin{center}
                     \begin{tikzpicture}[scale=1]
-                        %\SetVertexSimple[Shape=circle,FillColor=white]
-                        \def\rvar{1.2}
-                        \Vertex[x=0.00, y=-2.00]{$u$}
-                        \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-                        \Vertex[x=\rvar*1.18, y=1.62]{$q$}
-                        \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-                        \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-                        \Vertex[x=0, y=0]{$s$}
-                        \Edges($u$,$t$,$q$,$p$)
-                        \Edges($r$,$u$)
-                        \Edges($s$,$t$)
-                        \Edges($r$,$s$,$q$,$r$)
-                        \Edges($p$,$t$,$s$)
-                        \Edges($s$,$p$)
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00, L=$u$]{$u$} % 3
+                    \Vertex[x=\rvar*1.90, y=-0.62, L=$t$]{$t$} % 2
+                    \Vertex[x=\rvar*1.18, y=1.62, L=$q$]{$q$} % 1
+                    \Vertex[x=-1.18*\rvar, y=1.62, L=$p$]{$p$} % 0
+                    \Vertex[x=-1.90*\rvar, y=-0.62, L=$r$]{$r$} % 4
+                    \Vertex[x=0, y=0, L=$s$]{$s$} % 5
+                    \Edges($u$,$t$,$q$,$p$)
+                    \Edges($r$,$u$)
+                    \Edges($s$,$t$)
+                    \Edges($r$,$s$,$q$,$r$)
+                    \Edges($p$,$t$,$s$)
+                    \Edges($s$,$p$,$r$)
                     \end{tikzpicture}
-                \end{center}
+                    \end{center}
             \end{figure}
             
         \end{ejemplo}
@@ -298,27 +316,58 @@
     
     \begin{frame}
         \begin{solucion}
-            Debemos primero observar que la caminata euleriana debe existir pues $\delta(p)=3$, $\delta(q)=4$, $\delta(r)=3$, $\delta(s)=4$,     $\delta(t)=4$, y $\delta(u)=2$. 
+            Debemos primero observar que  debe existir un circuito euleriano, pues $\delta(p)=4$, $\delta(q)=4$, $\delta(r)=4$, $\delta(s)=4$, $\delta(t)=4$, y $\delta(u)=2$,  es decir todos los vértices tienen grado par. 
             \vskip .2cm
             
-            Debemos partir de $p$ y recorrer el grafo sin repetir aristas. Cuando  no podamos avanzar más habremos obtenido una caminata euleriana de un subgrafo:  en este caso todo el grafo. Una posible solución es, por ejemplo,
-            $$
-            p,s,q,p,t,u,r,s,t,q,r
-            $$  
-            \vskip .2cm
-            Existen muchas posibles caminatas eulerianas de $p$ a $r$, por ejemplo le proponemos que encuentre una cuya primera arista sea $\{p,t\}$.
+            Apliquemos el algoritmo de Hierholzer partiendo  desde $u$. Una caminata posible con origen en $u$ y que vuelva a $u$ es $$u, r, p, q, s, t, u.$$
+
+
+Ahora elijamos $q$ que es un vértice que pertenece a la caminata pero que tiene aristas que no son parte de la caminata. Una caminata que no toca aristas usadas y  que parte de $q$ y regresa a $q$ es $q,t,p,s,r,q$.  
+Insertamos en $q$  esta caminata  a la caminata anterior y obtenemos:
+$$u, r, p, \mathbf{q,t,p,s,r,q}, s, t, u.$$
+(En  negrita la caminata insertada).
 
             \qed
         \end{solucion}
     \end{frame}
     
 
-    \begin{frame}
-        \frametitle{}
+    \begin{frame}[fragile]\frametitle{Recorrido maximal}
+Mostramos en pseudocódigo el algoritmo de recorrido maximal. 
+
+\begin{verbatim}
+def r_max(L, v_ini): 
+    # pre: L grafo, v_ini vértice de L
+    # post: recorrido maximal que comienza en v_ini
+    sub_caminata = [v_ini]  # sub caminata
+    p0 = v_ini
+    while len(L.adyacentes(p0)) > 0:  
+        p1 = L.adyacentes(p0)[0] # p1 primer adyacente a p0 
+        sub_caminata.append(p1) # agrega p1 a caminata
+        L.quitar_arista((p0,p1)) # quita arista {p0, p1}
+        p0 = p1 
+    return sub_caminata
+\end{verbatim}
+\end{frame}
+
+\begin{frame}[fragile]
+    \frametitle{Algoritmo de Hierholzer}
+    Mostramos en pseudocódigo el algoritmo de Hierholzer
     
-        
-    
-    \end{frame}
-    
+\begin{verbatim}
+    # pre: G grafo admisible
+    # post: cuando termina 'c' es una caminata
+    #       o circuito euleriano que empieza en 0.
+    libres = G.copiar() # sub grafo de aristas no utilizadas
+    c = r_max(libres, v_ini) # recorrido maximal
+    while len(libres.aristas()) > 0: 
+        for v in libres.vertices(): 
+            if len(libres.adyacentes(v)) > 0 and v in c:
+                pos = cam.index(v) 
+                c  =  c[:pos] + r_max(libres, v) + c[pos+1:]
+\end{verbatim}
+
+\end{frame}
+
 \end{document}
 
