--- a/2021-1/beamer/C20_md1.tex
+++ b/2021-1/beamer/C20_md1.tex
@@ -307,7 +307,7 @@
     
     \begin{frame}
         \begin{ejemplo}
-            Dibujemos caminatas, caminos y ciclos en el siguiente grafo:
+            Dibujemos caminatas, caminos, recorridos y ciclos en el siguiente grafo:
             \vskip .4cm
             
             \begin{center}
@@ -335,7 +335,7 @@
     \end{frame}
 
     
-    \begin{frame}[fragile]
+    \begin{frame}
         
         Caminata: p,q,t,s,q,r,u
         
