--- a/2021-1/beamer/definiciones.tex
+++ b/2021-1/beamer/definiciones.tex
@@ -2,7 +2,7 @@
 % Ver http://joshua.smcvt.edu/latex2e/_005cnewenvironment-_0026-_005crenewenvironment.html
 %
 
-\renewenvironment{block}[1]% environment name
+\renewenvironment{block}[1][Nota]% environment name
 {% begin code
 	\par\vskip .2cm%
 	{\color{blue}#1}%
@@ -22,7 +22,7 @@
 	\vskip .2cm}% end code
 
 
-\renewenvironment{exampleblock}[1]% environment name
+\renewenvironment{exampleblock}[1][Ejemplo]% environment name
 {% begin code
 	\par\vskip .2cm%
 	{\color{blue}#1}%
